--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -26,7 +26,7 @@
       <!--Герой-->
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <a href="">Замовити послугу</a>
+        <button type="button">Замовити послугу</button>
       </section>
       <!--Особливості-->
       <section>
@@ -66,13 +66,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="./images/img1.svg" alt="Робота на планшеті" width="370" />
+            <img src="./images/img1.jpg" alt="Робота на планшеті" width="370" />
           </li>
           <li>
-            <img src="./images/img2.svg" alt="Робота на ноутбуці" width="370" />
+            <img src="./images/img2.jpg" alt="Робота на ноутбуці" width="370" />
           </li>
           <li>
-            <img src="./images/img3.svg" alt="Робота на лептопі" width="370" />
+            <img src="./images/img3.jpg" alt="Робота на лептопі" width="370" />
           </li>
         </ul>
       </section>
@@ -125,8 +125,8 @@
     </main>
     <footer>
       <a href="">WebStudio</a>
-      <address>м. Київ, пр-т Лесі Українки, 26</address>
       <address>
+        м. Київ, пр-т Лесі Українки, 26
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
